projetos/local/marquez/deployment-api-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marquez
  namespace: marquez
spec:
  template:
    spec:
      containers:
      - name: marquez
        resources:
          requests:
            cpu: "200m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
